--- a/src/components/FeaturedProject.css
+++ b/src/components/FeaturedProject.css
@@ -8,7 +8,7 @@
 
 .featured > .container {
   position: relative;
-  z-index: 1;
+  z-index: 3;
 }
 
 .featured-header {
